***********
version 1.2
***********

when compiled against qore >= 0.8.0, the driver supports Datasource::execRaw()
and time zones in Qore date/time values


***********
version 1.1
***********

fixed memory error in streaming c/blob retrieval (double free)
print a warning statement if debugging is enabled if OCI_SUCCESS_WITH_INFO is
returned by Oracle
bind character values greater than 30K bytes long as a CLOB
fixed a bug setting the port number for direct connections witout TNS


*************
version 1.0.9
*************

fixed auto-reconnect to mark the datasource as closed when auto-reconnect 
fails; otherwise a crash can occur when the datasource is reused


*************
version 1.0.8
*************

when compiled with qore module API 0.7 or greater (qore >= 0.7.5), the module
supports making direct connections without TNS by using the hostname and port
set in the Datasource or DatasourcePool object

updated query parsing for '%*' placeholders to ignore '%' characters when they
are preceded by an alphanumeric character in order to avoid having to use
backslashes to escape them in PL/SQL code, for example


*************
version 1.0.7
*************

updated to allow input and output variables to be bound for stored procedure
and function calls for types: string, binary, integer, float, date

fixed binary binding and retrieving in stored procedure and function calls

fixed backquoting ':' characters


*************
version 1.0.6
*************

updated to allow result sets and nested tables, etc to be returned directly
fixed a bug calculating memory for character buffers; memory was calculated as
the square of the memory actually needed


*************
version 1.0.5
*************

fixed a bug raising invalid handle exceptions; the exception description
contained a random series of bytes instead of string data


*************
version 1.0.4
*************

updated configure to check the directory specified with --prefix first when
looking for dependent libraries
